.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: larsjaeger
  namespace: lars.jaeger
spec:
  ingressClassName: nginx
  rules:
    - host: gaming.dhbw.schoeppi5.de
      http:
        paths:
          - backend:
              service:
                name: todo
                port:
                  number: 8080
            path: /
            pathType: Prefix
